refactor: Java 21 Thread.ofPlatform() 빌더로 ThreadFactory 개선 (Gemini PR#8)
## 변경사항
- QueueWorkerRunner의 ThreadFactory 구현을 익명 클래스에서 Java 21 빌더 패턴으로 변경
- 9줄 → 3줄 (67% 코드 감소)
- 가독성 향상 및 모던 Java 패턴 적용

## 기술 상세
**이전 (익명 클래스)**:
```java
ThreadFactory threadFactory = new ThreadFactory() {
    private final AtomicInteger threadNumber = new AtomicInteger(1);

    @Override
    public Thread newThread(Runnable r) {
        return new Thread(r, "queue-worker-" + threadNumber.getAndIncrement());
    }
};
```

**이후 (Java 21 빌더)**:
```java
ThreadFactory threadFactory = Thread.ofPlatform()
        .name("queue-worker-", 1)
        .factory();
```

## 효과
- 코드 간결성: 67% 감소
- 선언적 API: 더 읽기 쉬운 코드
- Java 21 기능 활용: 현대적 패턴

## 관련
- Gemini Code Assist PR#8 Review (MEDIUM Priority)
- OR-15: Runner 모듈 개선